--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>com.lmq</groupId>
   <artifactId>tomcat-ss</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.16.22</version>
+  	</dependency>
+  </dependencies>
 </project>
